--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"body-parser": "1.10.2",
 		"method-override": "2.3.1",
 		"cookie-parser": "1.3.3",
-		"serve-static": "1.8.1"
+		"serve-static": "1.8.1",
+		"morgan": "1.5.1",
+		"sequelize": "2.0.0-rc8",
+		"mysql": "2.5.4"
 	}
 }
